# 22mic7024

./: .env.example  .gitignore  LOCAL_SETUP.md  README.md  notification_system_design.md
logging_middleware/: __init__.py  client.py  constants.py  log.py  pyproject.toml
notification_app_be/: config.py  main.py
notification_app_be/routes/: priority.py
notification_app_be/services/: eval_client.py  priority_inbox.py
postman/: evaluation_service.json
scripts/: register.py  smoke_test_auth.py  smoke_test_log.py
vehicle_maintence_scheduler/: config.py  main.py
vehicle_maintence_scheduler/routes/: schedule.py
vehicle_maintence_scheduler/services/: eval_client.py  knapsack.py  schedule_service.py
