[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "logging_middleware"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.setuptools]
package-dir = {"logging_middleware" = "."}
packages = ["logging_middleware"]
